<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bgg"
    android:orientation="vertical"
    tools:context=".view.content.crudJadwal.InputJadwalActivity">

    <ProgressBar
        android:id="@+id/progress_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Input Jadwal"
                android:gravity="center"
                android:textColor="#F44336"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/jadwal_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="20dp"
                android:hint="@string/nama_movie"/>

            <EditText
                android:id="@+id/jadwal_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_marginTop="10dp"
                android:hint="@string/tanggal"/>

            <EditText
                android:id="@+id/jadwal_jenis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:hint="@string/jenis_movie"/>

            <Button
                android:id="@+id/btnJadwal_insert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/insert"
                android:textColor="@android:color/white"
                android:background="@drawable/bgg_button"/>

            <Button
                android:id="@+id/btnJadwal_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:background="@drawable/bgg_button"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>