<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:background="@drawable/avengers"
            android:scaleType="fitStart"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/go_profil"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_purple"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_account"
                    app:tint=" #fff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="#9C27B0"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/my_profil"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/go_movie"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_movie" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="#3F51B5"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/movie"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/go_location"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="#408E43"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/my_location"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/go_aktor"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_aktor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="#E38A08"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/aktor2"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/go_jadwal"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_jadwal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="#DD372B"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/jadwal"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/go_studio"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#CDDC39"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_studio" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="#9EA831"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/studio2"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bgg_button"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:text="Logout"/>
    </LinearLayout>
</ScrollView>